--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,12 +1,6 @@
 body {
-  margin: 0;
   font-family: 'Merriweather Sans','Noto Sans TC', "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-  font-size: 0.9375rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  text-align: left;
-  background-color: #f5f7fb;
+  background-color: #f8f9fa;
 }
 
 .footer {
